<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <NumberPicker
        android:id="@+id/year"
        android:layout_width="411dp"
        android:layout_height="181dp"
        app:layout_constraintBottom_toTopOf="@+id/popielec_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/roboczeButt"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginBottom="264dp"
        android:text="@string/butt2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/niedzieleButt" />

    <Button
        android:id="@+id/niedzieleButt"
        android:layout_width="200dp"
        android:layout_height="60dp"
        android:layout_marginBottom="264dp"
        android:text="@string/butt1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/popielec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/popiel"
        app:layout_constraintBottom_toTopOf="@+id/wielkanoc"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wielkanoc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/wielkanoc"
        app:layout_constraintBottom_toTopOf="@+id/boze_cialo"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/boze_cialo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="4dp"
        android:text="@string/cialo"
        app:layout_constraintBottom_toTopOf="@+id/adwent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/adwent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="12dp"
        android:text="@string/adwent"
        app:layout_constraintBottom_toTopOf="@+id/niedzieleButt"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/popielec_date"
        android:layout_width="0dp"
        android:layout_height="16dp"
        android:layout_marginStart="72dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/wielkanoc_date"
        app:layout_constraintStart_toEndOf="@+id/popielec" />

    <TextView
        android:id="@+id/boze_cialo_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/adwent_date"
        app:layout_constraintStart_toEndOf="@+id/boze_cialo" />

    <TextView
        android:id="@+id/wielkanoc_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toTopOf="@+id/boze_cialo_date"
        app:layout_constraintStart_toEndOf="@+id/wielkanoc" />

    <TextView
        android:id="@+id/adwent_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginBottom="12dp"
        app:layout_constraintBottom_toTopOf="@+id/niedzieleButt"
        app:layout_constraintStart_toEndOf="@+id/adwent" />

</androidx.constraintlayout.widget.ConstraintLayout>