<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Robocze">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:text="@string/datap"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="176dp"
        android:text="@string/datak"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <NumberPicker
        android:id="@+id/dayrd"
        android:layout_width="75dp"
        android:layout_height="140dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="212dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <NumberPicker
        android:id="@+id/dayrr"
        android:layout_width="75dp"
        android:layout_height="140dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="212dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <NumberPicker
        android:id="@+id/dayrm"
        android:layout_width="75dp"
        android:layout_height="140dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="212dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <NumberPicker
        android:id="@+id/dayd"
        android:layout_width="75dp"
        android:layout_height="140dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <NumberPicker
        android:id="@+id/dayr"
        android:layout_width="75dp"
        android:layout_height="140dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <NumberPicker
        android:id="@+id/daym"
        android:layout_width="75dp"
        android:layout_height="140dp"
        android:layout_marginStart="156dp"
        android:layout_marginTop="28dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/dni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="48dp"
        android:text="@string/dni"
        app:layout_constraintBottom_toBottomOf="@+id/dnir"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ilednir"
        android:layout_width="64dp"
        android:layout_height="16dp"
        android:layout_marginStart="84dp"
        android:layout_marginBottom="212dp"
        android:text="TextView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dnir" />

    <TextView
        android:id="@+id/dnir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="212dp"
        android:text="@string/dnir"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/iledni"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="36dp"
        android:text="TextView"
        app:layout_constraintBottom_toTopOf="@+id/ilednir"
        app:layout_constraintStart_toEndOf="@+id/dni" />

    <Button
        android:id="@+id/button"
        android:layout_width="401dp"
        android:layout_height="49dp"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="44dp"
        android:text="@string/butt3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>